feat: add plants

--- a/index.html
+++ b/index.html
@@ -6,6 +6,63 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <main id="page">
+        <section id="left-container" class="container">
+            <div class="plant-holder">
+                <img class="plant" alt="plant" id="plant1" src="./assets/img/plant1.png">
+            </div>
+            <div class="plant-holder">
+                <img class="plant" alt="plant" id="plant2" src="./assets/img/plant2.png">
+            </div>
+            <div class="plant-holder">
+                <img class="plant" alt="plant" id="plant3" src="./assets/img/plant3.png">
+            </div>
+            <div class="plant-holder">
+                <img class="plant" alt="plant" id="plant4" src="./assets/img/plant4.png">
+            </div>
+            <div class="plant-holder">
+                <img class="plant" alt="plant" id="plant5" src="./assets/img/plant5.png">
+            </div>
+            <div class="plant-holder">
+                <img class="plant" alt="plant" id="plant6" src="./assets/img/plant6.png">
+            </div>
+            <div class="plant-holder">
+                <img class="plant" alt="plant" id="plant7" src="./assets/img/plant7.png">
+            </div>
+        </section>
+        <section id="right-container" class="container">
+            <div class="plant-holder">
+                <img class="plant" alt="plant" id="plant8" src="./assets/img/plant8.png">
+            </div>
+            <div class="plant-holder">
+                <img class="plant" alt="plant" id="plant9" src="./assets/img/plant9.png">
+            </div>
+            <div class="plant-holder">
+                <img class="plant" alt="plant" id="plant10" src="./assets/img/plant10.png">
+            </div>
+            <div class="plant-holder">
+                <img class="plant" alt="plant" id="plant11" src="./assets/img/plant11.png">
+            </div>
+            <div class="plant-holder">
+                <img class="plant" alt="plant" id="plant12" src="./assets/img/plant12.png">
+            </div>
+            <div class="plant-holder">
+                <img class="plant" alt="plant" id="plant13" src="./assets/img/plant13.png">
+            </div>
+            <div class="plant-holder">
+                <img class="plant" alt="plant" id="plant14" src="./assets/img/plant14.png">
+            </div>
+        </section>
+    </main>
+
+    <div id="terrarium">
+        <div class="jar-top"></div>
+        <div class="jar-walls">
+            <div class="jar-glossy-long"></div>
+            <div class="jar-glossy-short"></div>
+        </div>
+        <div class="dirt"></div>
+        <div class="jar-bottom"></div>
+    </div>
 </body>
 </html>
